--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,8 @@ CHANGES
 0.2 (unreleased)
 ================
 
-- Nothing changed yet.
-
+- Remove clear_autocommit as it was useless during testing anyway.
+  In tests just use explicit commit.
 
 0.1 (2016-03-29)
 ================
