--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,12 @@ CHANGES
 0.3 (unreleased)
 ================
 
-- Nothing changed yet.
+- Document ``importscan`` package that can be used in combination with
+  this one.
 
+- Introduced ``factory_arguments`` feature on ``config`` factories,
+  which can be used to create dependency relationships between
+  configuration.
 
 0.2 (2016-03-29)
 ================
