--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,9 @@ CHANGES
 0.5 (unreleased)
 ================
 
-- Nothing changed yet.
-
+- **Breaking change** The signature of ``commit`` has changed. Just
+  pass in one or more arguments you want to commit instead of a list. See
+  #8.
 
 0.4 (2016-04-01)
 ================
