--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,9 @@ CHANGES
 
 - Implement new `convert_bool`.
 
+- Allow use of directive name instead of Action subclass as argument
+  to Query.
+
 0.6 (2016-04-06)
 ================
 
