--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,9 @@ CHANGES
 - Allow use of directive name instead of Action subclass as argument
   to Query.
 
+- A `query_app` function which is especially helpful when writing tests
+  for the query tool -- it takes unconverted filter arguments.
+
 0.6 (2016-04-06)
 ================
 
