--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,17 +6,22 @@ CHANGES
 
 - Fix a few documentation issues.
 
-- Expose `convert_dotted_name` and document it.
+- Expose ``convert_dotted_name`` and document it.
 
-- Implement new `convert_bool`.
+- Implement new ``convert_bool``.
 
 - Allow use of directive name instead of Action subclass as argument
   to Query.
 
-- A `query_app` function which is especially helpful when writing tests
-  for the query tool -- it takes unconverted filter arguments.
+- A ``query_app`` function which is especially helpful when writing
+  tests for the query tool -- it takes unconverted filter arguments.
 
 - Use newer version of ``with_metaclass`` from six.
+
+- Expose ``NOT_FOUND`` and document it.
+
+- Introduce a new ``filter_get_value`` method you can implement if the
+  normal attribute getting and ``filter_name`` are not enough.
 
 0.6 (2016-04-06)
 ================
