--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,10 +4,10 @@ CHANGES
 0.9 (unreleased)
 ================
 
-- Change the behavior of query_tool so that if it cannot find
-  an action class for the directive name the query result is empty
-  instead of making this an error. This makes ``auto_query_tool``
-  work better.
+- Change the behavior of ``query_tool`` so that if it cannot find an
+  action class for the directive name the query result is empty
+  instead of making this an error. This makes ``auto_query_tool`` work
+  better.
 
 - Introduce ``auto_query_tool`` which uses the automatically found
   app classes as the default app classes to query.
