--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,7 @@ CHANGES
 0.10 (unreleased)
 =================
 
-- Nothing changed yet.
-
+- ``topological_sort`` function is exposed as the public API.
 
 0.9.1 (2016-04-19)
 ==================
