--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ CHANGES
 
 - ``topological_sort`` function is exposed as the public API.
 
+- A ``commit`` class method on ``App`` classes.
+
 0.9.1 (2016-04-19)
 ==================
 
