--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,14 @@
 CHANGES
 *******
 
-0.11 (unreleased)
-=================
+0.10.2 (unreleased)
+===================
 
-- Nothing changed yet.
+- If nothing is found for an app in the query tool, don't mention it
+  in the output so as to avoid cluttering the results.
 
+- Fix a major bug in the query tool where if an app resulted in no
+  results, any subsequent apps weren't even searched.
 
 0.10.1 (2016-04-26)
 ===================
