--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,12 @@ CHANGES
 0.11 (unreleased)
 =================
 
-- **Removed**: ``autocommit`` and ``auto_query_tool`` are
-  both removed from the Dectate API.
+- **Removed**: ``autocommit`` was removed from the Dectate API. Rely
+  on the ``commit`` class method of the ``App`` class instead for a
+  more explicit alternative.
+
+- **Removed**: ``auto_query_tool`` was removed from the Dectate API.
+  Use ``query_tool(App.commit())`` instead.
 
 0.10.2 (2016-04-26)
 ===================
