--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,7 +13,7 @@ CHANGES
 
 - Fix ``repr`` of directives so that you can at least see their name.
 
-- Added support for Python 3.5.
+- Add support for Python 3.5 and make it the default testing environment.
 
 0.10.2 (2016-04-26)
 ===================
