--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,7 +13,9 @@ CHANGES
 
 - Fix ``repr`` of directives so that you can at least see their name.
 
-- Add support for Python 3.5 and make it the default testing environment.
+- Add support for Python 3.3 and 3.5.
+
+- Make Python 3.5 the default testing environment.
 
 0.10.2 (2016-04-26)
 ===================
