A few small language things: use imperative for changelog entries.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,11 +15,11 @@ CHANGES
 
 - Fix: the execution order of filters is now reproducible.
 
-- Using abstract base classes from the standard library for the Action
-  and Composite classes.
+- Use abstract base classes from the standard library for the ``Action``
+  and ``Composite`` classes.
 
-- Using feature detection instead of version detection to ensure
-  Python 2/3 compatibility.
+- Use feature detection instead of version detection to ensure Python
+  2/3 compatibility.
 
 - Increased test coverage.
 
