--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,7 +13,8 @@ CHANGES
 
 - Fix ``repr`` of directives so that you can at least see their name.
 
-- Fix: the execution order of filters is now reproducible.
+- he execution order of filters is now reproducible, to ensure
+  consistent test covearge reports.
 
 - Use abstract base classes from the standard library for the ``Action``
   and ``Composite`` classes.
