--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ CHANGES
 0.12 (unreleased)
 =================
 
-- Nothing changed yet.
+- Use the same Git ignore file used in other Morepath projects.
 
 
 0.11 (2016-07-18)
