A note about private_action_class.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,6 +30,12 @@ CHANGES
   So, you define the directives directly on the app class that needs
   them.
 
+  Uses of ``private_action_class`` should be replaced by an underscored
+  directive definition::
+
+     class MyApp(dectate.App):
+        _my_private_thing = directive(PrivateAction)
+
 - Use the same Git ignore file used in other Morepath projects.
 
 - If you set the ``app_class_arg`` class attribute to ``True`` on an
