Work around bug in coveralls
https://github.com/coveralls-clients/coveralls-python/issues/251

modified:   .github/workflows/main.yml
modified:   CHANGES.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,9 @@ CHANGES
 
 - Add support for Python 3.9.
 
+- Use GitHub Actions instead of Travis for CI.
+(Travis no longer gives free credits to open source projects.)
+
 
 0.14 (2020-01-29)
 =================
