--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,11 @@ CHANGES
 
 - Drop support for Python 3.4 and 3.5.
 
+- Add support for Python 3.9.
+
+- Use GitHub Actions instead of Travis for CI.
+(Travis no longer gives free credits to open source projects.)
+
 
 0.14 (2020-01-29)
 =================
